fix: arrow z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -153,7 +153,7 @@ nav {
   top: 46%;
   cursor: pointer;
   position: absolute;
-  z-index: 10;
+  z-index: 1;
 }
 
 .next_img{
@@ -161,7 +161,7 @@ nav {
   left: 90.5%;
   cursor: pointer;
   position: absolute;
-  z-index: 10;
+  z-index: 1;
 }
 
 .slide{
@@ -1043,7 +1043,7 @@ footer {
 		}
   .navigation__navigation{
     justify-content: center;
-    		/* display:none; */
+    	/* display:none; */
 		position: absolute;
 		left: 0;
 		height: 100vh;
